--- a/E-merceCloud/Base.lproj/Main.storyboard
+++ b/E-merceCloud/Base.lproj/Main.storyboard
@@ -70,7 +70,6 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="loginAction:" destination="04Y-O4-2G0" eventType="touchUpInside" id="TKp-oh-fzi"/>
                                     <action selector="signUpAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BAW-Er-kWV"/>
                                 </connections>
                             </button>
@@ -151,7 +150,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2305" y="3294"/>
+            <point key="canvasLocation" x="-2913" y="3294"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Xva-Y6-VzE">
@@ -233,7 +232,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ji8-gh-ABG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1530" y="2525"/>
+            <point key="canvasLocation" x="-2914" y="2490"/>
         </scene>
         <!--Products View Controller-->
         <scene sceneID="Bq4-Vg-TWt">
@@ -300,7 +299,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yjt-aV-FSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1744.8" y="2840.3298350824589"/>
+            <point key="canvasLocation" x="22" y="2490"/>
         </scene>
         <!--Product Detail View Controller-->
         <scene sceneID="JXH-vf-Jda">
@@ -329,7 +328,7 @@
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <color key="backgroundColor" red="0.1068724766" green="0.28587856890000002" blue="0.46872878070000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                <state key="normal" title="Add to card">
+                                                <state key="normal" title="Add to cart">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -407,7 +406,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g1C-w4-9nU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2500" y="2923.5382308845578"/>
+            <point key="canvasLocation" x="1020" y="2572"/>
         </scene>
         <!--Products-->
         <scene sceneID="n2W-M7-AId">
@@ -424,7 +423,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jv0-VW-sKG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="937" y="2841"/>
+            <point key="canvasLocation" x="-940" y="2490"/>
         </scene>
         <!--Home-->
         <scene sceneID="guy-J2-lrT">
@@ -544,7 +543,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rnf-Wh-VoB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="936.79999999999995" y="2004.1979010494754"/>
+            <point key="canvasLocation" x="-940" y="1605"/>
         </scene>
         <!--Profile-->
         <scene sceneID="Q3u-lM-vMR">
@@ -639,8 +638,7 @@
                                 </state>
                                 <connections>
                                     <action selector="contactCompanyAction:" destination="kD1-cu-v5L" eventType="touchUpInside" id="Zvk-zY-i5J"/>
-                                    <action selector="logOutAction:" destination="kD1-cu-v5L" eventType="touchUpInside" id="hKI-eO-gMD"/>
-                                    <segue destination="Y7S-Sf-ynM" kind="show" id="zrP-n6-Gzk"/>
+                                    <segue destination="Y7S-Sf-ynM" kind="show" customClass="SegueRightToLeft" customModule="E_merceCloud" customModuleProvider="target" id="DCD-9K-k8b"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logout" translatesAutoresizingMaskIntoConstraints="NO" id="sBu-eb-1Pp">
@@ -663,7 +661,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ItA-lO-4lX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2110" y="4111"/>
+            <point key="canvasLocation" x="-1948" y="3950"/>
         </scene>
         <!--Company View Controller-->
         <scene sceneID="x1D-eK-IEM">
@@ -728,21 +726,34 @@
                                 </state>
                                 <connections>
                                     <action selector="callAction:" destination="Y7S-Sf-ynM" eventType="touchUpInside" id="Pn8-dL-66u"/>
-                                    <action selector="contactCompanyAction:" destination="kD1-cu-v5L" eventType="touchUpInside" id="Szb-Dg-OnP"/>
-                                    <action selector="logOutAction:" destination="kD1-cu-v5L" eventType="touchUpInside" id="097-7o-P4M"/>
                                 </connections>
                             </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jJF-gt-4MN">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="MYr-3s-cif">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Kc7-hR-KGO">
+                                            <connections>
+                                                <action selector="backAction:" destination="Y7S-Sf-ynM" id="dUN-79-WOJ"/>
+                                                <segue destination="kD1-cu-v5L" kind="show" id="kwx-Nm-44h"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ik8-c3-JHD"/>
                     </view>
+                    <navigationItem key="navigationItem" id="WnQ-Np-jfO"/>
                     <connections>
                         <outlet property="callBton" destination="4Mv-Kx-Qge" id="g6s-Na-z9p"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4I4-aZ-WES" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1130.4000000000001" y="4109.5952023988011"/>
+            <point key="canvasLocation" x="-940" y="3924"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="m9U-Y7-zzh">
@@ -756,30 +767,13 @@
                     <connections>
                         <segue destination="Lod-5P-uZX" kind="relationship" relationship="viewControllers" id="Efg-A1-QHr"/>
                         <segue destination="nfk-WX-Pwg" kind="relationship" relationship="viewControllers" id="HoQ-3Q-VTb"/>
-                        <segue destination="HX2-wz-drK" kind="relationship" relationship="viewControllers" id="6BU-gQ-gOY"/>
+                        <segue destination="kD1-cu-v5L" kind="relationship" relationship="viewControllers" id="dFR-HK-JEk"/>
                         <segue destination="kM5-e8-0tU" kind="relationship" relationship="viewControllers" id="USu-jQ-M8w"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GVY-ST-Wip" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-394" y="2525"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="E6x-9F-FfQ">
-            <objects>
-                <navigationController id="HX2-wz-drK" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" image="user" id="BE5-o4-9NU"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="b9o-W9-14E">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="kD1-cu-v5L" kind="relationship" relationship="rootViewController" id="z9e-9m-XM2"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mRS-pM-f81" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-745" y="3242"/>
+            <point key="canvasLocation" x="-1999" y="2490"/>
         </scene>
         <!--Cart-->
         <scene sceneID="tG3-Xp-tkf">
@@ -867,7 +861,6 @@
                                 </state>
                                 <connections>
                                     <action selector="checkOutAction:" destination="kM5-e8-0tU" eventType="touchUpInside" id="ehm-Q4-4Jv"/>
-                                    <action selector="logOutAction:" destination="kD1-cu-v5L" eventType="touchUpInside" id="oE6-sz-m3k"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -883,7 +876,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TRP-Lx-HPY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="517.60000000000002" y="3579.7601199400301"/>
+            <point key="canvasLocation" x="23" y="3294"/>
         </scene>
     </scenes>
     <resources>
@@ -902,6 +895,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="7cP-QJ-Q00"/>
+        <segue reference="dFR-HK-JEk"/>
         <segue reference="g5E-SM-joe"/>
     </inferredMetricsTieBreakers>
 </document>
